[6-8] 예외 분리